# docs/swagger.yaml
@@ -1231,6 +1231,108 @@ definitions:
       ParentCategoryId:
         type: integer
     type: object
+  yahoo.CategoryLeafImage:
+    properties:
+      '@height':
+        type: integer
+      '@width':
+        type: integer
+      url:
+        type: string
+    type: object
+  yahoo.CategoryLeafItem:
+    properties:
+      Affiliate:
+        $ref: '#/definitions/yahoo.Affiliate'
+      AuctionID:
+        type: string
+      AuctionItemUrl:
+        type: string
+      BidOrBuy:
+        type: number
+      Bids:
+        type: integer
+      CharityOption:
+        $ref: '#/definitions/yahoo.CharityOption'
+      CurrentPrice:
+        type: number
+      EndTime:
+        type: string
+      Image:
+        $ref: '#/definitions/yahoo.CategoryLeafImage'
+      IsAdult:
+        type: boolean
+      IsReserved:
+        type: boolean
+      ItemUrl:
+        type: string
+      Option:
+        $ref: '#/definitions/yahoo.CategoryLeafOption'
+      OriginalImageNum:
+        type: integer
+      Seller:
+        $ref: '#/definitions/yahoo.AuctionItemListSeller'
+      StartTime:
+        type: string
+      Title:
+        type: string
+    type: object
+  yahoo.CategoryLeafOption:
+    properties:
+      BuynowIcon:
+        type: string
+      CharityOptionIcon:
+        type: string
+      EasyPaymentIcon:
+        type: string
+      FeaturedIcon:
+        type: string
+      FreeshippingIcon:
+        type: string
+      IsBackGroundColor:
+        type: boolean
+      IsBold:
+        type: boolean
+      IsCharity:
+        type: boolean
+      IsOffer:
+        type: boolean
+      NewIcon:
+        type: string
+      NewItemIcon:
+        type: string
+      PointIcon:
+        type: string
+      StoreIcon:
+        type: string
+      WrappingIcon:
+        type: string
+    type: object
+  yahoo.CategoryLeafResponse:
+    properties:
+      ResultSet:
+        properties:
+          '@firstResultPosition':
+            type: integer
+          '@totalResultsAvailable':
+            type: integer
+          '@totalResultsReturned':
+            type: integer
+          Result:
+            $ref: '#/definitions/yahoo.CategoryLeafResult'
+        type: object
+    type: object
+  yahoo.CategoryLeafResult:
+    properties:
+      CategoryIdPath:
+        type: string
+      CategoryPath:
+        type: string
+      Item:
+        items:
+          $ref: '#/definitions/yahoo.CategoryLeafItem'
+        type: array
+    type: object
   yahoo.CharityOption:
     properties:
       Proportion:
@@ -2297,6 +2399,166 @@ paths:
           schema:
             $ref: '#/definitions/err.BizError'
       summary: Get Yahoo Auction item
+      tags:
+      - Yahoo
+  /v1/supplysrv/internal/yahoo/categoryLeaf:
+    get:
+      consumes:
+      - application/json
+      description: Get category leaf from Yahoo Auction
+      parameters:
+      - example: a7062ca18a39e7ec551499958684745f3bd28227c7ae52b5246492c738fa7989
+        in: header
+        name: hmac
+        required: true
+        type: string
+      - example: "1762155727995"
+        in: header
+        name: timestamp
+        required: true
+        type: string
+      - example: adc3d4cb-d4d0-4a74-9908-5b95bee4d62b
+        in: header
+        name: X-Request-ID
+        required: true
+        type: string
+      - in: query
+        name: adf
+        type: integer
+      - in: query
+        name: attn
+        type: integer
+      - in: query
+        name: aucmax_bidorbuy_price
+        type: integer
+      - in: query
+        name: aucmaxprice
+        type: integer
+      - in: query
+        name: aucmin_bidorbuy_price
+        type: integer
+      - in: query
+        name: aucminprice
+        type: integer
+      - in: query
+        name: black_seller_auc_user_id
+        type: string
+      - in: query
+        name: buynow
+        type: integer
+      - in: query
+        name: callback
+        type: string
+      - in: query
+        name: category
+        type: integer
+      - in: query
+        name: easypayment
+        type: integer
+      - in: query
+        name: except_category
+        type: string
+      - in: query
+        name: except_shoppingitem
+        type: integer
+      - in: query
+        name: featured
+        type: integer
+      - in: query
+        name: fixed
+        type: integer
+      - in: query
+        name: freeshipping
+        type: integer
+      - in: query
+        name: item_status
+        type: string
+      - in: query
+        name: loc_cd
+        type: string
+      - in: query
+        name: max_affiliate
+        type: integer
+      - in: query
+        name: max_charity
+        type: integer
+      - in: query
+        name: max_start
+        type: integer
+      - in: query
+        name: min_affiliate
+        type: integer
+      - in: query
+        name: min_charity
+        type: integer
+      - in: query
+        name: min_start
+        type: integer
+      - in: query
+        name: new
+        type: integer
+      - in: query
+        name: order
+        type: string
+      - in: query
+        name: order2
+        type: string
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: point
+        type: integer
+      - in: query
+        name: ranking
+        type: integer
+      - in: query
+        name: seller_auc_user_id
+        type: string
+      - in: query
+        name: sort
+        type: string
+      - in: query
+        name: sort2
+        type: string
+      - in: query
+        name: store
+        type: integer
+      - in: query
+        name: thumbnail
+        type: integer
+      - in: query
+        name: timebuf
+        type: integer
+      - in: query
+        name: wrappingicon
+        type: integer
+      - in: query
+        name: yahoo_account_id
+        type: string
+      - in: query
+        name: ys_ref_id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved category leaf
+          schema:
+            $ref: '#/definitions/yahoo.CategoryLeafResponse'
+        "400":
+          description: Invalid parameter
+          schema:
+            $ref: '#/definitions/err.BizError'
+        "404":
+          description: category leaf not found
+          schema:
+            $ref: '#/definitions/err.BizError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/err.BizError'
+      summary: Get Yahoo Auction category leaf
       tags:
       - Yahoo
   /v1/supplysrv/internal/yahoo/categoryTree:
